--- a/y7.md
+++ b/y7.md
@@ -7,16 +7,15 @@ bodyClass: page-about
 
 # Course Description
 
-Year 9 Technology invites students to explore the exciting world of design, innovation, and problem-solving through a series of hands-on modules. From mastering flowcharts and programming logic to building interactive Arduino devices, fabricating real-world prototypes, and designing architectural models, students will develop practical skills and creative confidence. Each project challenges them to think critically, work collaboratively, and bring ideas to life through technology.
+Year 7 Technology invites students to explore the exciting world of design, innovation, and problem-solving through a series of hands-on modules. From mastering flowcharts and programming logic to building interactive Arduino devices, fabricating real-world prototypes, and designing architectural models, students will develop practical skills and creative confidence. Each project challenges them to think critically, work collaboratively, and bring ideas to life through technology.
 
 Click on each module to dive into the projects and see what you'll be creating.
 
 # Modules:
-- Reading and creating flow charts
-- Computer Programming
-- Arduino
+- [IT SKills For Boardgame Design](\y7u1)
 - Fabrication
-- Architecture
+- Scratch Game Programming
+- Electronics
 
 
 For questions about Year 9 Technology, contact Mr. Rees either via teams or at elliott.rees@nais.hk
