--- a/y7.md
+++ b/y7.md
@@ -1,5 +1,5 @@
 ---
-title: Year 9 Technology - Designing The Future
+title: Year 7 Technology - Developing STEAM skills through games!
 layout: page
 description: About
 bodyClass: page-about
@@ -7,9 +7,7 @@ bodyClass: page-about
 
 # Course Description
 
-Year 7 Technology invites students to explore the exciting world of design, innovation, and problem-solving through a series of hands-on modules. From mastering flowcharts and programming logic to building interactive Arduino devices, fabricating real-world prototypes, and designing architectural models, students will develop practical skills and creative confidence. Each project challenges them to think critically, work collaboratively, and bring ideas to life through technology.
-
-Click on each module to dive into the projects and see what you'll be creating.
+Welcome to Year 7 Computer Science! 🎲 This year, you’ll explore four exciting topics that all connect to one big project: designing your own board game. You’ll learn IT skills to help you plan and present your ideas, use fabrication tools to create custom game pieces, build a Scratch game version of your board game, and even design simple electronics that interact with your game. Every skill you learn will help bring your board game to life—both on screen and in the real world!
 
 # Modules:
 - [IT SKills For Boardgame Design](\y7u1)
@@ -18,4 +16,4 @@ Click on each module to dive into the projects and see what you'll be creating.
 - Electronics
 
 
-For questions about Year 9 Technology, contact Mr. Rees either via teams or at elliott.rees@nais.hk
+For questions about Year 7 Technology, contact Mr. Rees either via teams or at elliott.rees@nais.hk
