--- a/y9.md
+++ b/y9.md
@@ -12,7 +12,7 @@ Year 9 Technology invites students to explore the exciting world of design, inno
 Click on each module to dive into the projects and see what you'll be creating.
 
 # Modules:
-- Reading and creating flow charts
+- [Reading and creating flow charts](\y9u1)
 - Computer Programming
 - Arduino
 - Fabrication
