--- a/y8.md
+++ b/y8.md
@@ -1,5 +1,5 @@
 ---
-title: Year 9 Technology - Designing The Future
+title: Year 8 Technology - Think It. Build It. Code It
 layout: page
 description: About
 bodyClass: page-about
@@ -7,16 +7,13 @@ bodyClass: page-about
 
 # Course Description
 
-Year 9 Technology invites students to explore the exciting world of design, innovation, and problem-solving through a series of hands-on modules. From mastering flowcharts and programming logic to building interactive Arduino devices, fabricating real-world prototypes, and designing architectural models, students will develop practical skills and creative confidence. Each project challenges them to think critically, work collaboratively, and bring ideas to life through technology.
-
+This year, you’ll dive into the exciting world of technology and creativity. You’ll start by building games and animations in Scratch, then level up to writing real code in Python. Along the way, you’ll explore fabrication—designing and creating physical objects using 3D printers and laser cutters — and get hands-on with robotics, where your code will bring machines to life. Whether you're a curious creator or a future engineer, this journey is all about learning by doing and having fun while you build the future.
 Click on each module to dive into the projects and see what you'll be creating.
 
 # Modules:
-- Reading and creating flow charts
-- Computer Programming
-- Arduino
+- [Computer Programming Introduction In Scratch](\y8u1)
+- Python Programming
 - Fabrication
-- Architecture
+- Robotics
 
-
-For questions about Year 9 Technology, contact Mr. Rees either via teams or at elliott.rees@nais.hk
+For questions about Year 8 Technology, contact Mr. Rees either via teams or at elliott.rees@nais.hk
