--- a/y7u1.md
+++ b/y7u1.md
@@ -45,7 +45,7 @@ Use Microsoft Word to write a brief description of your game as well as the rule
 4. Add your name and form to the header of the document.
 5. Add the text “Board Game Rules” to the footer of the document.
 6. Write three sentences giving an overview of your game.
-7. Add the heading “Rules:” and name 5 characters from the harry potter books. Set them as bullet points.
+7. Add the heading “Rules:” and list your game rules below. Set them as bullet points.
 8. Add a picture to your document. Ensure the text wraps around!
 9. Spell check the document to ensure there are no spelling or grammar errors in the text.
 
