--- a/y7.md
+++ b/y7.md
@@ -10,7 +10,7 @@ bodyClass: page-about
 Welcome to Year 7 Computer Science! 🎲 This year, you’ll explore four exciting topics that all connect to one big project: designing your own board game. You’ll learn IT skills to help you plan and present your ideas, use fabrication tools to create custom game pieces, build a Scratch game version of your board game, and even design simple electronics that interact with your game. Every skill you learn will help bring your board game to life—both on screen and in the real world!
 
 # Modules:
-- [IT SKills For Boardgame Design](\y7u1)
+- [IT Skills For Boardgame Design](\y7u1)
 - Fabrication
 - Scratch Game Programming
 - Electronics
