--- a/y8u1.md
+++ b/y8u1.md
@@ -36,6 +36,38 @@ In this unit, you’ll begin your journey into computer programming by learning 
 <iframe src="/Files/Y8/u1l2.pdf" width="100%" height="600px" style="border: none;"></iframe>
 </p>
 
+## Lesson 3: Creating the game board – Advertising (PowerPoint)
 
+#### Lesson objectives
+- To know a program is a set of commands that can be run by a computer for it to do a task. 
+- To understand that All programming languages have rules for syntax that must be followed so that the program can run. 
+- To be able to use the print() function to output information from a Python program. 
+- To be able to use the input() function to allow the user to enter information into a Python program.
+
+### Do Now:
+During lesson one, you created a chatbot using the following program.
+
+<p align="center">
+<img src="/images/illustrations/y8l3.png" width="50%" height="auto">
+</p>
+
+
+Compare the following code:
+
+```python
+def ask_name:
+  print("What is your name?")
+  name = input()
+  print("hello ", name)
+
+print("Hello")
+print("I am big Ed from the year 2182")
+ask_name()
+```
+
+### Activities:
+1. Go to the following website: https://www.online-python.com
+2. Copy the above code to see it run.
+3. Recreate your chatbot from the first lesson using the Python programming language. Your program should ask a question, save the response in a variable and include the users answer in the response.
 
 <hr>
