--- a/y8u1.md
+++ b/y8u1.md
@@ -55,7 +55,7 @@ During lesson one, you created a chatbot using the following program.
 Compare the following code:
 
 ```python
-def ask_name:
+def ask_name():
   print("What is your name?")
   name = input()
   print("hello ", name)
@@ -65,9 +65,11 @@ print("I am big Ed from the year 2182")
 ask_name()
 ```
 
-### Activities:
+### Activity 1:
 1. Go to the following website: https://www.online-python.com
-2. Copy the above code to see it run.
-3. Recreate your chatbot from the first lesson using the Python programming language. Your program should ask a question, save the response in a variable and include the users answer in the response.
+2. Copy the above code to see it run. Does it ru
+
+### Activity 2:
+Recreate your chatbot from the first lesson using the Python programming language. Your program should ask a question, save the response in a variable and include the users answer in the response. We will add the personalised responses using the "if blocks" within the next lesson.
 
 <hr>
