--- a/y8u1.md
+++ b/y8u1.md
@@ -24,7 +24,7 @@ In this unit, you’ll begin your journey into computer programming by learning 
 
 <hr>
 
-## Lesson 2: Creating the game board – Advertising (PowerPoint)
+## Lesson 2: Calculations in Scratch
 
 #### Lesson objectives
 - To be able to use decisions in your code to control the flow of logic.
@@ -38,7 +38,7 @@ In this unit, you’ll begin your journey into computer programming by learning 
 
 <hr>
 
-## Lesson 3: Creating the game board – Advertising (PowerPoint)
+## Lesson 3: Introduction to Python
 
 #### Lesson objectives
 - To know a program is a set of commands that can be run by a computer for it to do a task. 
@@ -68,10 +68,77 @@ ask_name()
 ```
 
 ### Activity 1:
-1. Go to the following website: https://www.online-python.com
+1. Go to the following website: <a href = "https://www.online-python.com">www.online-python.com</a>
 2. Copy the above code to see it run. Does it ru
 
 ### Activity 2:
 Recreate your chatbot from the first lesson using the Python programming language. Your program should ask a question, save the response in a variable and include the users answer in the response. We will add the personalised responses using the "if blocks" within the next lesson.
 
 <hr>
+
+
+## Lesson 4: Adding decisions to your chatbot
+
+#### Lesson objectives
+- To know what a decision is in Python.
+- To be able to use a decision to check if two values are the same.
+- To be able to use a decision to carry other other types of comparisons.
+
+### Do Now:
+
+Describe how you used the print command, input command, a function and variable in your code from last lesson.
+
+### Activity 1
+
+review the following code. Can you read it?
+
+<p align="center">
+<img src="/images/illustrations/y8l4.png" width="50%" height="auto">
+</p>
+
+Compare the above Scratch to the python code below. Can you see how they compare?
+
+```python
+def ask_hobby():
+  print("What sports do you like?")
+  sport = input()
+
+  if sport == "football:"
+    print("Thats the best sport ever!")
+
+  if sport == "basketbal:"
+    print("Thats the best sport ever!")
+
+
+print("Hello")
+print("I am big Ed from the year 2182")
+ask_hobby()
+
+
+### Activity 2:
+Add a function to your chatbot which asks the user a question and uses the if command to give a different responce depending on the users answer.
+
+
+### Activity 3:
+
+Take a look at the following code which you may have seen when building your Scratch program. You should notice the if blocks have a different type of comparison compared to the ask_hobby functions.
+
+<p align="center">
+<img src="/images/illustrations/y8l4_2.png" width="50%" height="auto">
+</p>
+
+
+You can carry out a range of comparisons in your decisions:
+
+
+| Symbol | Meaning                   | Example                |
+|:------:|:-------------------------:|:----------------------:|
+|   ==   | Is equal to               | if name == "Mr Rees":  |
+|   !=   | Not equal to              | if homework != "done": |
+|   >    | greater than              | if age > 18:           |
+|   <    | less then                 | if score < 50:         |
+|   >=   | greater than or equal to  | if goals >= 5:         |
+|   <=   | Less than or equal to     | if points <= 10:       |
+
+
+Add a function to your code which contains a different type of check than what you have already used.
