--- a/y8u1.md
+++ b/y8u1.md
@@ -127,10 +127,9 @@ Take a look at the following code which you may have seen when building your Scr
 <img src="/images/illustrations/y8l4_2.png" width="50%" height="auto">
 </p>
 
-
 You can carry out a range of comparisons in your decisions:
 
-
+<p align="center">
 | Symbol | Meaning                   | Example                |
 |:------:|:-------------------------:|:----------------------:|
 |   ==   | Is equal to               | if name == "Mr Rees":  |
@@ -139,6 +138,6 @@ You can carry out a range of comparisons in your decisions:
 |   <    | less then                 | if score < 50:         |
 |   >=   | greater than or equal to  | if goals >= 5:         |
 |   <=   | Less than or equal to     | if points <= 10:       |
-
+</p>
 
 Add a function to your code which contains a different type of check than what you have already used.
