Fixed typos in lesson 3

--- a/y8u1.md
+++ b/y8u1.md
@@ -106,8 +106,8 @@ def ask_hobby():
   if sport == "football:"
     print("Thats the best sport ever!")
 
-  if sport == "basketbal:"
-    print("Thats the best sport ever!")
+  if sport == "basketball:"
+    print("I'm not tall enough for basketball")
 
 
 print("Hello")
