Fixed more minor lesson content errors with L3 and L4

--- a/y8u1.md
+++ b/y8u1.md
@@ -54,7 +54,7 @@ During lesson one, you created a chatbot using the following program.
 </p>
 
 
-Compare the following code:
+Compare the above Scratch to the python code below:
 
 ```python
 def ask_name():
@@ -69,7 +69,7 @@ ask_name()
 
 ### Activity 1:
 1. Go to the following website: <a href = "https://www.online-python.com">www.online-python.com</a>
-2. Copy the above code to see it run. Does it ru
+2. Copy the above code to see it run. Does it run and can you explain what each line of code does?
 
 ### Activity 2:
 Recreate your chatbot from the first lesson using the Python programming language. Your program should ask a question, save the response in a variable and include the users answer in the response. We will add the personalised responses using the "if blocks" within the next lesson.
