--- a/y8u1.md
+++ b/y8u1.md
@@ -103,10 +103,10 @@ def ask_hobby():
   print("What sports do you like?")
   sport = input()
 
-  if sport == "football:"
+  if sport == "football":
     print("Thats the best sport ever!")
 
-  if sport == "basketball:"
+  if sport == "basketball":
     print("I'm not tall enough for basketball")
 
 
