Removed python link and made scratch link about both scratch and python

--- a/y8.md
+++ b/y8.md
@@ -11,8 +11,7 @@ This year, you’ll dive into the exciting world of technology and creativity. Y
 Click on each module to dive into the projects and see what you'll be creating.
 
 # Modules:
-- [Computer Programming Introduction In Scratch](\y8u1)
-- Python Programming
+- [Computer Programming Introduction In Scratch & Python](\y8u1)
 - Fabrication
 - Robotics
 
