adding if else syntax

--- a/y8u1.md
+++ b/y8u1.md
@@ -115,6 +115,13 @@ print("I am big Ed from the year 2182")
 ask_hobby()
 ```
 
+<p align="center">
+<img src="/images/illustrations/if:else.png" width="50%" height="auto">
+</p>
+
+<p align="center">
+<img src="/images/illustrations/if:elsepitfalls.png" width="50%" height="auto">
+</p>
 ### Activity 2:
 Add a function to your chatbot which asks the user a question and uses the if command to give a different responce depending on the users answer.
 
