--- a/y8u1.md
+++ b/y8u1.md
@@ -116,11 +116,11 @@ ask_hobby()
 ```
 
 <p align="center">
-<img src="/images/illustrations/if:else.png" width="50%" height="auto">
+<img src="/images/illustrations/if:else.png"  height="auto">
 </p>
 
 <p align="center">
-<img src="/images/illustrations/if:elsepitfalls.png" width="50%" height="auto">
+<img src="/images/illustrations/if:elsepitfalls.png"  height="auto">
 </p>
 ### Activity 2:
 Add a function to your chatbot which asks the user a question and uses the if command to give a different responce depending on the users answer.
