Update y8u1.md addition scratch

--- a/y8u1.md
+++ b/y8u1.md
@@ -125,5 +125,60 @@ ask_hobby()
 ### Activity 2:
 Add a function to your chatbot which asks the user a question and uses the if command to give a different responce depending on the users answer.
 
+## Lesson 5: Casting and Numerical Input in Python
+
+#### Lesson objectives
+
+- To know how to do calculations in Python
+- To be able to convert that input into a number using int() or float() so Python can do math with it
+- To be able to write simple programs that take numbers from the user and do calculations.
+
+### Do Now:
+An operator is a symbol or special word that instructs the computer to perform specific calculation or action. Guess what symbol do we use in python to do the maths calculation below:
+
+Addition
+Subtraction
+Multiplication
+Division
+
+| Operation     |Symbol|
+|:-------------:|:----------:|
+| Addition      |            |
+| Subtraction.  |            | 
+| Multiplication|            |
+|  Division     |            | 
+
+
+
+Imagine an expression with lots of operation. How does Python know which one to do first?
+
+### Activity 1
+Convert addition scratch code to Python
+<p align="center">
+<img src="/images/illustrations/addition.png"  height="auto">
+</p>
+
+def addition():
+    print("Enter first number")
+    number1=int(input())
+    print("Enter second number")
+    number2=int(input())
+    answer=number1+number2
+    print("The answer is:", answer)
+    
+print("Welcome to the maths assistant 5000")
+addition()
+```
+Create other function subtraction, multiplication, division and large number
+
+
+### Activity 2
+Add if statement to your code
+
+
+
+
+### Extension
+Apart from int() Python has other data types. Research what they are and give examples. 
 
 
