Update y8u1.md python update

--- a/y8u1.md
+++ b/y8u1.md
@@ -158,6 +158,7 @@ Convert addition scratch code to Python
 <img src="/images/illustrations/addition.png"  height="auto">
 </p>
 
+```python
 def addition():
     print("Enter first number")
     number1=int(input())
