Update y8u1.md addition I/else

--- a/y8u1.md
+++ b/y8u1.md
@@ -175,9 +175,27 @@ Create other function subtraction, multiplication, division and large number
 
 ### Activity 2
 Add if statement to your code
+<p align="center">
+<img src="/images/illustrations/Scratch calc.png"  height="auto">
+</p>
 
 
+```python
+def addition():
+    print("Enter first number")
+    number1=int(input())
+    print("Enter second number")
+    number2=int(input())
+    answer=number1+number2
+    print("The answer is:", answer)
 
+    
+print("Welcome to the maths assistant 5000")
+print("What type of calculation would you like to do")
+choice=input()
+if choice=="addition":
+    addition()
+```
 
 ### Extension
 Apart from int() Python has other data types. Research what they are and give examples. 
