Update y8u1.md lesson 5 extension activity

--- a/y8u1.md
+++ b/y8u1.md
@@ -130,7 +130,7 @@ Add a function to your chatbot which asks the user a question and uses the if co
 #### Lesson objectives
 
 - To know how to do calculations in Python
-- To be able to convert that input into a number using int() or float() so Python can do math with it
+- To be able to convert that input into a number using int() so Python can do math with it
 - To be able to write simple programs that take numbers from the user and do calculations.
 
 ### Do Now:
@@ -198,6 +198,7 @@ if choice=="addition":
 ```
 
 ### Extension
-Apart from int() Python has other data types. Research what they are and give examples. 
+- Apart from int() you can also use float() for numbers with decimal point try changing your code from int to float. 
+- Python has other data types apart from integer int() and float() decimal numbers. Research what they are and give examples. 
 
 
