--- a/y9u1.md
+++ b/y9u1.md
@@ -31,7 +31,7 @@ bodyClass: page-about
 
 <hr>
 
-## Lesson 2: Creating the game board – Advertising (PowerPoint)
+## Lesson 2: Creating a chatbot in Scratch code and Flowchart
 
 #### Lesson objectives
 - To be able to follow flowcharts to implement block based programs.
@@ -47,11 +47,11 @@ bodyClass: page-about
 
 
 ### Part 2
-Using canva, create a flowchart which represents the logic of your code!
+Using <a href="draw.io">draw.io</a>, create a flowchart which represents the logic of your code!
 
 <hr>
 
-## Lesson 3: Creating the game board – Advertising (PowerPoint)
+## Lesson 3: Creating a Calculator in Scratch code and Flowchart
 
 #### Lesson objectives
 - To know what decisions are when programming.
@@ -65,7 +65,7 @@ Using canva, create a flowchart which represents the logic of your code!
 
 
 ### Part 2
-Using canva, create a flowchart which represents the logic of your code!
+Using <a href="draw.io">draw.io</a>, create a flowchart which represents the logic of your code!
 
 
 
