--- a/y9u1.md
+++ b/y9u1.md
@@ -47,7 +47,7 @@ bodyClass: page-about
 
 
 ### Part 2
-Using <a href="draw.io">draw.io</a>, create a flowchart which represents the logic of your code!
+Using <a href="https://draw.io">draw.io</a>, create a flowchart which represents the logic of your code!
 
 <hr>
 
