--- a/y9u1.md
+++ b/y9u1.md
@@ -49,6 +49,8 @@ bodyClass: page-about
 ### Part 2
 Using <a href="https://draw.io">draw.io</a>, create a flowchart which represents the logic of your code!
 
+Submit your work on the teams assignment for checking.
+
 <hr>
 
 ## Lesson 3: Creating a Calculator in Scratch code and Flowchart
@@ -65,8 +67,8 @@ Using <a href="https://draw.io">draw.io</a>, create a flowchart which represents
 
 
 ### Part 2
-Using <a href="draw.io">draw.io</a>, create a flowchart which represents the logic of your code!
+Using  <a href="https://draw.io">draw.io</a>, create a flowchart which represents the logic of your code!
 
-
+Submit your work on the teams assignment for checking.
 
 <hr>
