--- a/y7u1.md
+++ b/y7u1.md
@@ -9,6 +9,9 @@ bodyClass: page-about
 
 In this project, you will design and develop your own original board game, combining creativity, digital skills and fabrication technology. You will define the concept and rules of their game, create promotional materials to advertise it, design and create a visually engaging game board and 3D print / laser cut any game pieces. The task encourages imaginative thinking, clear communication, and effective use of digital tools to bring their ideas to life in a professional and polished way.
 
+
+
+
 <hr>
 
 ## 🛠️ Lesson 0 - Setting up the required technology
@@ -40,7 +43,7 @@ Use Microsoft Word to write a brief description of your game as well as the rule
 
 ### Tasks:
 1. Create a new Microsoft Word file. Save it in your Computer Science/boardgame subfolder with an appropriate name!
-2. Type the name of your board game at the top of the page as a title. Set this title to size 30, bold, underlined with the impact font. This title should be centre aligned.
+2. Type the name of your board game at the top of the page as a title. Set this title to size 30, bold, underlined with a font of your choice. This title should be centre aligned.
 3. Create a subtitle “Produced By:” followed by your name. This text should be size 18, calibri font, italic, right aligned and set to your favourite colour.
 4. Add your name and form to the header of the document.
 5. Add the text “Board Game Rules” to the footer of the document.
@@ -82,16 +85,18 @@ Your presentation should:
 <hr>
 
 
-## 🧩 Lesson 3: Creating the game board – Advertising (PowerPoint)
+## 🧩 Lesson 3: Creating the game board – Advertising (Canva)
 
 #### Lesson objectives
 - To be able to set custom dimensions and layout in Canva for a printable design. Students will learn how to adjust page size and use guides to plan their board layout.
 - To be able to use design tools to create a clear and engaging game board. Students will apply shapes, colours, text, and images to make their board easy to understand and fun to play.
 - To be able to prepare a digital design for printing and physical assembly.
 
-Create a new Canva project which is 30 cm wide by 30cm high. On your new page, create a visually engaging and functional game board for the game you have designed in earlier lessons. Your design will be printed and turned and turned into the physical board for your project. 
+Create a new Canva project which is A4 size. You can select either landscape or portrait.
 
-After the project has been submitted, you wil be given your printed game sheet and a 30cm x 30cm sheet of corregated cardboard. Carefully cut out the sheet and stick your printed game sheet to the provided cardboard, ensuring it lines up and no airbubbles are trapped.
+On your new page, create a visually engaging and functional game board for the game you have designed in earlier lessons. Your design will be printed and turned and turned into the physical board for your project. 
+
+After the project has been submitted, you wil be given your printed game sheet and a sheet of kraft cardboard. Carefully stick your printed game sheet to the provided cardboard, ensuring it lines up and no airbubbles are trapped.
 
 <hr>
 
