--- a/y7u1.md
+++ b/y7u1.md
@@ -10,7 +10,19 @@ bodyClass: page-about
 In this project, you will design and develop your own original board game, combining creativity, digital skills and fabrication technology. You will define the concept and rules of their game, create promotional materials to advertise it, design and create a visually engaging game board and 3D print / laser cut any game pieces. The task encourages imaginative thinking, clear communication, and effective use of digital tools to bring their ideas to life in a professional and polished way.
 
 
+During the project, you will be given:
+- a gameboard (which you must design)
+- a dice
+- $100 Nord Dollars.
 
+You can use to purchase 3D models and laser cut pieces which you have designed using Nord Dollard to help make your board game. The prices are:
+  
+| Object          |   Price    |
+|:---------------:|:----------:|
+| 3D Model        |  $50       |
+| Laser cut token |  $25       | 
+
+You could therefore have four laser cut tokens, two 3D prints or a single 3D print and two tokens.
 
 <hr>
 
