--- a/y7.md
+++ b/y7.md
@@ -11,7 +11,8 @@ Welcome to Year 7 Computer Science! 🎲 This year, you’ll explore four exciti
 
 # Modules:
 - [IT Skills For Boardgame Design](\y7u1)
-- Fabrication
+- Fabrication Part 1: 3D Modelling
+- Fabrication Part 2: 2D Modelling
 - Scratch Game Programming
 - Electronics
 
