--- a/y7.md
+++ b/y7.md
@@ -11,7 +11,7 @@ Welcome to Year 7 Computer Science! 🎲 This year, you’ll explore four exciti
 
 # Modules:
 - [IT Skills For Boardgame Design](\y7u1)
-- Fabrication Part 1: 3D Modelling
+- [Fabrication Part 1: 3D Modelling](\y7u2)
 - Fabrication Part 2: 2D Modelling
 - Scratch Game Programming
 - Electronics
