--- a/y7u2.md
+++ b/y7u2.md
@@ -5,6 +5,8 @@ description: About
 bodyClass: page-about
 ---
 
+
+
 # The Project
 
 In this project, you will design and develop your own original board game, combining creativity, digital skills and fabrication technology. You will define the concept and rules of their game, create promotional materials to advertise it, design and create a visually engaging game board and 3D print / laser cut any game pieces. The task encourages imaginative thinking, clear communication, and effective use of digital tools to bring their ideas to life in a professional and polished way.
@@ -44,9 +46,12 @@ Activity 2: Log into OneDrive and set up the following file structure:
 
 <hr>
 
-## 🧠 Lesson 1: Define the Game – Rules & Mechanics (Microsoft Word)
-
 #### Tutorial 1: Creating a Ring
+
+
+<p align="center">
+<img src="/images/illustrations/ring.jpg" width="50%" height="auto">
+</p>
 
 #### Tutorial 2: Creating a Shirt Button
 
