--- a/y7u2.md
+++ b/y7u2.md
@@ -8,10 +8,11 @@ bodyClass: page-about
 
 #### Tutorial 1: Creating a Ring
 
-
-<p align="center">
+<p>
 <img src="/images/illustrations/ring.jpg" width="50%" height="auto">
 </p>
+
+<a href="https://www.tinkercad.com/learn/overview/monogrammed-ring?collectionId=OSZ5W2BL1W5N51F&type=designs>Tutorial Link</a>
 
 #### Tutorial 2: Creating a Shirt Button
 
