--- a/y7u2.md
+++ b/y7u2.md
@@ -12,7 +12,7 @@ bodyClass: page-about
 <img src="/images/illustrations/ring.jpg" width="50%" height="auto">
 </p>
 
-<a href="https://www.tinkercad.com/learn/overview/monogrammed-ring?collectionId=OSZ5W2BL1W5N51F&type=designs>Tutorial Link</a>
+<a href="https://www.tinkercad.com/learn/overview/monogrammed-ring?collectionId=OSZ5W2BL1W5N51F&type=designs">Tutorial Link</a>
 
 #### Tutorial 2: Creating a Shirt Button
 
