--- a/y7u2.md
+++ b/y7u2.md
@@ -16,17 +16,57 @@ bodyClass: page-about
 
 #### Tutorial 2: Creating a Shirt Button
 
+<p>
+<img src="/images/illustrations/heart_button.jpg" width="50%" height="auto">
+</p>
+
+<a href="https://www.tinkercad.com/learn/overview/OM2W146IYEQ50DG?collectionId=OSZ5W2BL1W5N51F&type=designs">Tutorial Link</a>
+
 #### Tutorial 3: Creating a Keychain
+
+<p>
+<img src="/images/illustrations/keychain.jpg" width="50%" height="auto">
+</p>
+
+<a href="https://www.tinkercad.com/learn/overview/O221E4PIRXTO4GT?collectionId=OSZ5W2BL1W5N51F&type=designs">Tutorial Link</a>
 
 #### Tutorial 4: Creating a Dice
 
+<p>
+<img src="/images/illustrations/die_from_scratch.jpg" width="50%" height="auto">
+</p>
+
+<a href="https://www.tinkercad.com/learn/overview/OMPFUS5IYC6JRMP?collectionId=OSZ5W2BL1W5N51F&type=designs">Tutorial Link</a>
+
 #### Tutorial 5: Creating a Spork
+
+<p>
+<img src="/images/illustrations/spork.jpg" width="50%" height="auto">
+</p>
+
+<a href="https://www.tinkercad.com/learn/overview/spork-utensil?collectionId=OSZ5W2BL1W5N51F&type=designs">Tutorial Link</a>
 
 #### Tutorial 6: Creating a ruler
 
+<p>
+<img src="/images/illustrations/ruler.jpg" width="50%" height="auto">
+</p>
+
+<a href="https://www.tinkercad.com/learn/overview/OFN4E3XIYB2H2PN?collectionId=OSZ5W2BL1W5N51F&type=designs">Tutorial Link</a>
+
 #### Tutorial 7: Creating a Chess Piece
+
+<p>
+<img src="/images/illustrations/chess_pawn.jpg" width="50%" height="auto">
+</p>
+
+<a href="https://www.tinkercad.com/learn/overview/O698ZZXIXGFTSXU?collectionId=OSZ5W2BL1W5N51F&type=designs">Tutorial Link</a>
 
 #### Tutorial 8: Creating an Alien Character
 
+<p>
+<img src="/images/illustrations/alien.jpg" width="50%" height="auto">
+</p>
 
+<a href="https://www.tinkercad.com/learn/overview/O1CTK6ZIRXTLZSH?collectionId=OSZ5W2BL1W5N51F&type=designs">Tutorial Link</a>
 
