--- a/y7u2.md
+++ b/y7u2.md
@@ -1,5 +1,5 @@
 ---
-title: Year 7 - Fabrication Part 1: 3D Modelling
+title: "Year 7 - Fabrication Part 1: 3D Modelling"
 layout: page
 description: About
 bodyClass: page-about
