--- a/y7u2.md
+++ b/y7u2.md
@@ -4,7 +4,17 @@ layout: page
 description: About
 bodyClass: page-about
 ---
-# The Project
+# What is 3D Modelling?
+
+3D modelling is the process of creating a digital representation of a three-dimensional object using specialized software. It allows designers to build and visualize objects from any angle, modify them easily, and prepare them for physical production—such as 3D printing or laser cutting. 3D modelling is widely used in industries like architecture, engineering, animation, video game design, and product development, helping professionals prototype ideas, simulate real-world scenarios, and bring creative concepts to life.
+
+In this module, you are going to use tinkercad to create the game pieces for the game you designed in the previous unit. 
+
+Before you create your own designs, its important to learn how to make high quality models. 
+
+# Part 1: Learning the basics.
+
+Complete each of the tutorials below to see how different types of objects can be modelled. After creating each design, take a screenshot of your work and add it to your 3D modelling journal which you can find on Microsoft teams.
 
 #### Tutorial 1: Creating a Ring
 
