--- a/y9u1.md
+++ b/y9u1.md
@@ -72,3 +72,30 @@ Using  <a href="https://draw.io">draw.io</a>, create a flowchart which represent
 Submit your work on the teams assignment for checking.
 
 <hr>
+
+### Lesson 4: 
+
+#### Lesson objectives
+- To know what decisions are when programming.
+- To be able to make calculations when programming
+- To know how comparisions are made between two values when programming including.
+
+
+
+### What is an Arduino?
+An Arduino is a small computer you can hold in your hand. It doesn’t have a screen or keyboard, but you can tell it what to do by writing simple code on your computer and sending it to the board. Unlike your laptop which is designed to save and run many computer programs, an arduino is designed to run one program only.
+
+With Arduino, you can control real things using electronics — like making a robot arm wave hello, building a motion-sensing alarm that buzzes when someone walks by, creating a light show that reacts to music, or even designing a mini weather station that tells you the temperature and humidity. It's like turning your ideas into real gadgets with just a few wires and lines of code.
+
+
+
+
+
+
+
+| Data Type     |Description         | Example      |
+|:-------------:|:------------------:|:------------:|
+| Integer       | A whole number     |  10          |
+| String        | Words and Sentences| Hello Year 9!| 
+| Float         | A decimal number   |    4.1       | 
+| Boolean       | True or False      | True or 1    | 
