--- a/y9u1.md
+++ b/y9u1.md
@@ -89,9 +89,29 @@ With Arduino, you can control real things using electronics — like making a ro
 
 
 
+''' 
+float areaOfSquare(float side) {
+  float area = side * side; // multiply side by itself
+  return area;              // return the result
+}
 
+void setup() {
+  Serial.begin(9600); // start the Serial Monitor
 
+  float sideLength = 5.0; // example side length in cm
+  float area = areaOfSquare(sideLength);
 
+  Serial.print("The area of a square with side ");
+  Serial.print(sideLength);
+  Serial.print(" cm is ");
+  Serial.print(area);
+  Serial.println(" cm²");
+}
+
+void loop() {
+  // Nothing needed here for now
+}
+'''
 
 | Data Type     |Description         | Example      |
 |:-------------:|:------------------:|:------------:|
