--- a/y9u1.md
+++ b/y9u1.md
@@ -89,7 +89,8 @@ With Arduino, you can control real things using electronics — like making a ro
 
 
 
-''' 
+
+```cpp
 float areaOfSquare(float side) {
   float area = side * side; // multiply side by itself
   return area;              // return the result
@@ -111,7 +112,7 @@ void setup() {
 void loop() {
   // Nothing needed here for now
 }
-'''
+```
 
 | Data Type     |Description         | Example      |
 |:-------------:|:------------------:|:------------:|
