--- a/y9u1.md
+++ b/y9u1.md
@@ -76,9 +76,11 @@ Submit your work on the teams assignment for checking.
 ### Lesson 4: 
 
 #### Lesson objectives
-- To know what decisions are when programming.
-- To be able to make calculations when programming
-- To know how comparisions are made between two values when programming including.
+- Declare and use variables (int, float, String).
+- Perform basic arithmetic operations.
+- Use functions to organise code.
+- Use conditionals to control program flow.
+- Combine with variables and functions for structured programs.
 
 
 
@@ -88,6 +90,10 @@ An Arduino is a small computer you can hold in your hand. It doesn’t have a sc
 With Arduino, you can control real things using electronics — like making a robot arm wave hello, building a motion-sensing alarm that buzzes when someone walks by, creating a light show that reacts to music, or even designing a mini weather station that tells you the temperature and humidity. It's like turning your ideas into real gadgets with just a few wires and lines of code.
 
 
+
+## Activity 1: Copy and run the code below. Ensure you understand it before moving onto Activity 2.
+
+Write the
 
 
 ```cpp
@@ -114,9 +120,44 @@ void loop() {
 }
 ```
 
+### Key Information: You must outline the data type of variables when programmign with Arduino.
+
 | Data Type     |Description         | Example      |
 |:-------------:|:------------------:|:------------:|
 | Integer       | A whole number     |  10          |
 | String        | Words and Sentences| Hello Year 9!| 
 | Float         | A decimal number   |    4.1       | 
 | Boolean       | True or False      | True or 1    | 
+
+
+## Activity 2: Add additional functions to the program which have the following functionality:
+- Create a function which converts a temperature in celcius to fahrenheit 
+- Create a function which calcuate the average of three numbers.
+- Create a function which converts USD to HKD.
+- Create a function which calculates how far an object has moved.
+- Create a function which calculates the area of a circle.
+
+## Activity 3: An if statement allows us to make some thing happen IF a condition is true. Copy and run the code below to see how it works.
+
+```cpp
+void ageChecker(int age) {
+   if(age > 18){
+     Serial.println("your too old to go to NAIS HK!")
+   } else if (age >=16){
+     Serial.println("You can join the IBDP course!")
+  } else if (age >=14){
+     Serial.println("You can join the IGCSE course!")
+  }else{
+     Serial.println("You are in KS3!")
+  }
+}
+```
+
+
+## Activity 4: Add additional functions to the program which have the following functionality:
+- Checks if two numbers are the same.
+- Identifies which is the largest out of two numbers.
+- Check if a number is positive, negative, or zero
+- Write a program that categorises a temperature (Hot / Warm / Cold).
+- Assigns grades to the user based on a score (A > 80, B > 70, C > 60 etc...) 
+
