--- a/y9u1.md
+++ b/y9u1.md
@@ -141,16 +141,20 @@ void loop() {
 
 ```cpp
 void ageChecker(int age) {
-   if(age > 18){
-     Serial.println("your too old to go to NAIS HK!")
-   } else if (age >=16){
-     Serial.println("You can join the IBDP course!")
-  } else if (age >=14){
-     Serial.println("You can join the IGCSE course!")
-  }else{
-     Serial.println("You are in KS3!")
+  if (age > 18) {
+    Serial.println("You're too old to go to NAIS HK!");
+  } 
+  else if (age >= 16) {
+    Serial.println("You can join the IBDP course!");
+  } 
+  else if (age >= 14) {
+    Serial.println("You can join the IGCSE course!");
+  } 
+  else {
+    Serial.println("You are in KS3!");
   }
 }
+
 ```
 
 
