--- a/y9u1.md
+++ b/y9u1.md
@@ -73,7 +73,7 @@ Submit your work on the teams assignment for checking.
 
 <hr>
 
-### Lesson 4: 
+#Lesson 4: Transitioning to text based coding languages. 
 
 #### Lesson objectives
 - Declare and use variables (int, float, String).
