Update y9u1.md Arduino (Omar)

--- a/y9u1.md
+++ b/y9u1.md
@@ -165,3 +165,43 @@ void ageChecker(int age) {
 - Write a program that categorises a temperature (Hot / Warm / Cold).
 - Assigns grades to the user based on a score (A > 80, B > 70, C > 60 etc...) 
 
+# Lesson 5: Programming Arduino Devices in Tinkercad – Lesson 1 
+
+#### Lesson objectives
+- Able to create a Tinkercad account using their school Microsoft account 
+- Able to use Tinkercad tutorials to create Arduino Circuit projects 
+- Able to use the Block-based programming interface to create basic Arduino Circuits 
+- Able to create Arduino mini-projects 
+- Understand what an output is 
+- Understand what a Digital input is 
+- Able to switch between the Block-based, Text-based and Block+Text-based programming interfaces and make connections between the Blocks and the C++ code 
+
+## Activity 1: My Tinkercad account
+Students created their Tinkercad account using their school Microsoft account, not their personal/private account 
+
+## Activity 2: Arduino-based Circuits in Tinkercad
+<p align="center">
+<img src="/images/illustrations/Circuit.png" width="50%" height="auto">
+</p>
+
+Find and use the Circuits button to start creating Arduino projects using the following tutorials: 
+
+- Ohm’s Law (https://www.tinkercad.com/learn/overview/OOUF6LFL20FZS45?type=circuits)  
+- Blink a LED with Digital Output (https://www.tinkercad.com/learn/overview/OMX1W9AL26F9EMF?type=circuits) 
+- Fading LED with Analog Output (https://www.tinkercad.com/learn/overview/ORHT6NFL26F9GSW?type=circuits) 
+- RGB LED Colour Mixing (https://www.tinkercad.com/learn/overview/ORLI9ZOL26F9GWK?type=circuits) 
+- Multiple LEDs & Breadboards (https://www.tinkercad.com/learn/overview/O94BCSIL26F9EV3?type=circuits)
+- Pushbutton (Digital Input) (https://www.tinkercad.com/learn/overview/OT6OSJQL26F9GYT?type=circuits)
+
+## Acivity 3: Switching between the Block-based, Text-based, and Block+Text-based interfaces 
+
+<p align="center">
+<img src="/images/illustrations/tinkercadcode.png" width="50%" height="auto">
+</p>
+
+Students use the “Code” button to switch between the Block-based, Text-based, and Block+Text-based interfaces 
+
+Students are invited to compare the code between the various project created and start making notes/connections between the blocks and the C++ code 
+
+## Extension: 
+The Potentiometer (Analog Input) - https://www.tinkercad.com/learn/overview/OG8Z4G7L26F9GZ6?type=circuits 
